syntax = "proto3";

package com.fagp;

option java_package = "com.fagp.basics.core.protobuf.aheader"; //java  语言包
option java_outer_classname = "Header";

//服务器 返回前端的 header
message GameResponseHeader {
   int32 cmd = 2; //命令号
   int32 status_code = 3; //250 表示成功，其他数值表示有错误
   string status_msg = 4; // 状态值 成功则是 success 错误则反回错误对应说明
   int32 version = 5; // 这个是版本号 目前没有用 主要是应对接口变动兼容老版本
}

//请求服务器
message GameRequestHeader {
   int32 cmd = 2; //命令号
   int32 version = 3; //版本号 目前没有用  主要是应对接口变动兼容老版本
}


